kubernetes/influxdb/base/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: influxdb
  name: influxdb
spec:
  replicas: 1
  selector:
    matchLabels: {}
  serviceName: influxdb
  template:
    metadata:
      labels: {}
    spec:
      containers:
        - image: influxdb:latest
          name: influxdb
          ports:
            - containerPort: 8086
              name: influxdb
          volumeMounts:
            - mountPath: /var/lib/influxdb2
              name: data
            - mountPath: /etc/influxdb2
              name: config
  volumeClaimTemplates:
      - metadata:
          name: data
        spec:
          storageClassName: nfs-csi
          accessModes:
            - ReadWriteOnce
          resources:
            requests:
              storage: 20G
      - metadata:
          name: config
        spec:
          storageClassName: nfs-csi
          accessModes:
            - ReadWriteOnce
          resources:
            requests:
              storage: 5G
