kubernetes/influxdb/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  labels:
    app.kubernetes.io/name: influxdb
spec:
  ports:
    - name: influxdb
      port: 8086
      targetPort: data
  selector:
      app: influxdb
  type: ClusterIP
