kubernetes/influxdb/base/traefik.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: influxdb-tls
  labels:
    app.kubernetes.io/name: influxdb
    app.kubernetes.io/component: network
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`influxdb.k8s.kijowski.casa`)
      kind: Rule
      services:
        - name: influxdb
          kind: TraefikService

  tls:
    certResolver: aws-dns
